--- a/src/scss/blocks/table.scss
+++ b/src/scss/blocks/table.scss
@@ -1,8 +1,13 @@
 .table__col {
     padding: 7px;
 
-    &--number {
-        display: none;
+    @media (max-width: $mobile-width-only) {
+        &--mobile-hidden {
+            display: none;
+
+
+        }
     }
+
 
 }
